Closed Bug 1555812 Opened 6 years ago Closed 6 years ago

[Wayland][HiDPI] Hamburger menu can't be closed by sequent mouse click

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When clicked on hamburger menu icon by mouse, the menu is opened. When clicked again the menu is closed and opened again. It's because the nsXULPopupManager does not recognize popup anchor on Wayland.

nsXULPopupManager::Rollup() does not recognize a popup anchor.

Assignee: nobody → stransky

It's caused by wrong mouse coordinates passed to nsXULPopupManager::Rollup() by widget code in HiDPI mode.

Component: Layout → Widget: Gtk
Summary: [Wayland] Hamburger menu can't be closed by sequent mouse click → [Wayland][HiDPI] Hamburger menu can't be closed by sequent mouse click
Priority: -- → P3

Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/e64d392a8336
[Linux][HiDPI] Pass device pixel coordinates to nsXULPopupManager::Rollup(), r=jhorak

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

Seeing the same issue on 77.0.1 on Fedora/GNOME Wayland (1 x scaling).

Esc or clicking elsewhere outside the menu closes it.

Flags: needinfo?(stransky)

It's a regression. I'll file a new bug.

Flags: needinfo?(stransky)
See Also: → 1645693
See Also: → 1645695
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: