Bug 1555812 - [Linux][HiDPI] Pass device pixel coordinates to nsXULPopupManager::Rollup(), r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D33251